--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,7 @@ dependencies = [
     "uvicorn>=0.34.2",
     "bcrypt>=4.3.0",
     "pyjwt>=2.10.1",
+    "python-multipart>=0.0.20",
+    "websockets>=15.0.1",
+    "pydantic-ai>=0.1.6",
 ]
