chat fetching and storing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,4 +16,5 @@ dependencies = [
     "python-multipart>=0.0.20",
     "websockets>=15.0.1",
     "pydantic-ai>=0.1.6",
+    "psycopg2-binary>=2.9.10",
 ]
