--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,9 @@ dependencies = [
     "redis>=6.0.0",
     "alembic>=1.15.2",
 ]
+
+[dependency-groups]
+dev = [
+    "httpx>=0.28.1",
+    "pytest>=8.3.5",
+]
