--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,45 +1,32 @@
-name: Deploy to Google Cloud Run
+name: Deploy to Google App Engine
 
 on:
   push:
     branches:
-      - main 
-  workflow_dispatch:  
+      - main
+  workflow_dispatch:
 
 env:
-  DOCKER_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
-  DOCKER_PASSWORD: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-  DOCKER_IMAGE: rjp1007/munchbot
   GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-  GCP_REGION: asia-south1
-  SERVICE_NAME: munchbot
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Log in to Docker Hub
-        run: echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin
-
-      - name: Build Docker image
-        run: docker build --no-cache -t $DOCKER_IMAGE:latest .
-
-      - name: Push image to Docker Hub
-        run: docker push $DOCKER_IMAGE:latest
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
 
       - name: Authenticate with Google Cloud
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Deploy to Google Cloud Run
+      - name: Deploy to App Engine
         run: |
-          gcloud run deploy $SERVICE_NAME \
-            --image docker.io/$DOCKER_IMAGE:latest \
-            --region $GCP_REGION \
-            --platform managed \
-            --allow-unauthenticated
+          gcloud app deploy app.yaml --quiet
