--- a/app.yml
+++ b/app.yml
@@ -1,2 +1,6 @@
 runtime: python310
 entrypoint: uvicorn main:app --host=0.0.0.0 --port=$PORT
+
+automatic_scaling:
+  max_instances: 1
+  min_instances: 0
