--- a/app.yml
+++ b/app.yml
@@ -1,5 +1,5 @@
 runtime: python310
-entrypoint: uvicorn main:app --host=0.0.0.0 --port=$PORT
+entrypoint: uvicorn app.main:app --host=0.0.0.0 --port=$PORT
 
 automatic_scaling:
   max_instances: 1
